--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -9,14 +9,20 @@
       <!-- <form (ngSubmit)="addTemplate()"> -->
       <div class="p-4 bg-white shadow-dark rounded-2">
         <div class="form-group row">
-          <label for="templateName" class="col-sm-2 col-form-label">Template Name</label>
+          <label for="templateName" class="col-sm-2 col-form-label">Template Name <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <input type="text"
                    class="form-control mw-350"
                    id="Templatename"
                    name="Templatename"
                    placeholder="Template Name"
-                   [(ngModel)]="templateForm.Templatename" />
+                   [(ngModel)]="templateForm.Templatename"
+                   required
+                     #TemplatenameInput="ngModel"
+                      />
+                      <div *ngIf="TemplatenameInput.invalid && (TemplatenameInput.dirty || TemplatenameInput.touched)" class="text-danger">
+                        Enter Template Time.
+                      </div>
           </div>
         </div>
         <div class="form-group row">
@@ -47,14 +53,23 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="description" class="col-sm-2 col-form-label">Description</label>
+          <label for="description" class="col-sm-2 col-form-label">Description <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <textarea class="form-control mw-350"
                       id="description"
                       name="description"
                       rows="3"
                       placeholder="Description"
-                      [(ngModel)]="templateForm.description"></textarea>
+                      [(ngModel)]="templateForm.description"
+                      required
+                       #descriptionInput="ngModel">
+                     
+
+                    </textarea>
+                    <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
+                      Enter description.
+      
+                    </div>
           </div>
         </div>
       </div>
