--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -1,76 +1,98 @@
 
-  <div class="container-fluid">
-    <div class="row p-2">
-      <div class="col">
-        <h4 class="page-title">{{title}}</h4>
-      </div>
-    </div>
-    <div class="row p-2">
-      <div class="col">
-        
-          <div class="p-4 bg-white shadow-dark rounded-2">
-
-            <div class="form-group row">
-              <label for="plantname" class="col-sm-2 col-form-label">Plant Name</label>
-              <div class="col-sm-10">
-                <input type="text"
-                       class="form-control"
-                       id="plantname"
-                       name="plantname"
-                       placeholder="Enter Plant Name" 
-                       [(ngModel)]="adddoc.PlantName"  />
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <label for="prefix" class="col-sm-2 col-form-label">Plant Code</label>
-              <div class="col-sm-10">
-                <input type="text"
-                       class="form-control"
-                       id="plantcode"
-                       name="plantcode"
-                       placeholder="Enter Plant Code"
-                       [(ngModel)]="adddoc.PlantCode" />
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="description" class="col-sm-2 col-form-label">Plant Address</label>
-              <div class="col-sm-10">
-                <textarea class="form-control"
-                          id="description"
-                          name="description"
-                          rows="3"
-                          placeholder="Enter Plant Address"
-                          [(ngModel)]="adddoc.PlantAddress" ></textarea>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="Comments" class="col-sm-2 col-form-label">Comments</label>
-              <div class="col-sm-10">
-                <input type="text"
-                       class="form-control"
-                       id="plantname"
-                       name="plantname"
-                       placeholder=""
-                       [(ngModel)]="adddoc.Comments"  />
-              </div>
-            </div>
-
-
-          </div>
-
-          <div class="form-group row my-4">
-            <div class="col-sm-10 offset-sm-2">
-              <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)">Submit</button>
-              <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
-            </div>
-          </div>
-
-       
-      </div>
+<div class="container-fluid">
+  <div class="row p-2">
+    <div class="col">
+      <h4 class="page-title">{{title}}</h4>
     </div>
   </div>
+  <div class="row p-2">
+    <div class="col">
+      
+        <div class="p-4 bg-white shadow-dark rounded-2">
+
+          <div class="form-group row">
+            <label for="plantname" class="col-sm-2 col-form-label">Plant Name<span style="color: red; font-weight: bolder;">*</span></label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="plantname"
+                     name="plantname"
+                     placeholder="Enter Plant Name" 
+                     [(ngModel)]="adddoc.PlantName"
+                     required
+                     #plantnameInput="ngModel"  />
+                     <div *ngIf="plantnameInput.invalid && (plantnameInput.dirty || plantnameInput.touched)" class="text-danger">
+                      Enter Plant Name.
+                    </div>
+
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="plantcode" class="col-sm-2 col-form-label">Plant Code<span style="color: red; font-weight: bolder;">*</span></label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="plantcode"
+                     name="plantcode"
+                     placeholder="Enter Plant Code"
+                     [(ngModel)]="adddoc.PlantCode" 
+                     required
+                     #plantcodeInput="ngModel" />
+                     <div *ngIf="plantcodeInput.invalid && (plantcodeInput.dirty || plantcodeInput.touched)" class="text-danger">
+                      Enter Plant Code.
+                    </div>
+
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="description" class="col-sm-2 col-form-label">Plant Address<span style="color: red; font-weight: bolder;">*</span></label>
+            <div class="col-sm-10">
+              <textarea class="form-control"
+                        id="description"
+                        name="description"
+                        rows="3"
+                        placeholder="Enter Plant Address"
+                        [(ngModel)]="adddoc.PlantAddress"  required
+                        #descriptionInput="ngModel">
+                      </textarea>
+                      <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
+                        Enter Plant Address.
+                      </div>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="Comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span></label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="Comments"
+                     name="Comments"
+                     placeholder=""
+                     [(ngModel)]="adddoc.Comments" 
+                     required
+                     #CommentsInput="ngModel" />
+                     <div *ngIf="CommentsInput.invalid && (CommentsInput.dirty || CommentsInput.touched)" class="text-danger">
+                      Write Comments.
+                    </div>
+            </div>
+          </div>
+
+
+        </div>
+
+        <div class="form-group row my-4">
+          <div class="col-sm-10 offset-sm-2">
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+          </div>
+        </div>
+
+     
+    </div>
+  </div>
+</div>
 
 
 
