--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Add-user-group-configuration/add-usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Add-user-group-configuration/add-usergroupconfiguration.component.html
@@ -21,12 +21,17 @@
                 name="usergroupname"
                 placeholder="User Group Name"
                 [(ngModel)]="newdept.usergroupname" 
+                [required]="true"
+                #usergroupnameInput="ngModel"
                
               />
+              <div *ngIf="usergroupnameInput.invalid && (usergroupnameInput.dirty || usergroupnameInput.touched)" class="text-danger">
+                Enter UserGroup Name.
+              </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">User Group Code</label>
+            <label for="code" class="col-sm-2 col-form-label">User Group Code</label>
             <div class="col-sm-10">
               <input
                 type="text"
@@ -35,8 +40,14 @@
                 name="code"
                 placeholder="Prefix"
                 [(ngModel)]="newdept.code" 
+                [required]="true"
+                #codeInput="ngModel"
                 
               />
+              <div *ngIf="codeInput.invalid && (usergroupnameInput.dirty || codeInput.touched)" class="text-danger">
+                Enter UserGroup Code.
+              </div>
+
             </div>
           </div>
           <div class="form-group row">
@@ -50,6 +61,7 @@
                   <ng-template pTemplate="newdept.users" let-options>
                     <ng-container *ngTemplateOutlet="customTemplate; context: {$implicit: options}"></ng-container>
                   </ng-template>
+                  
                 </p-multiSelect>
                 <ng-template #customTemplate let-options>
                   <div class="p-chips-container p-inputtext" *ngIf="types && types.length">
@@ -61,9 +73,14 @@
               <div *ngIf="!viewMode">
               <p-multiSelect [options]="types" [(ngModel)]="newdept.users" defaultLabel="Select a Users" 
               name="users" id="users" optionLabel="UserID" (ngModelChange)="calculateTotalUsers()"
-              
-               display="chip">
+               display="chip" [required]="true"
+               #usersInput="ngModel">
+               <div *ngIf="usersInput.invalid && (usersInput.dirty || usersInput.touched)" class="text-danger">
+                Select Users.
+              </div>
+
               </p-multiSelect>
+              
             </div>
             </div>
           </div>
@@ -78,8 +95,13 @@
                 name="totalusers"
                 placeholder="Total Users"
                 [(ngModel)]="newdept.totalusers"  readonly
-                
+                [required]="true"
+               #usersInput="ngModel"
               />
+              <div *ngIf="usersInput.invalid && (usersInput.dirty || usersInput.touched)" class="text-danger">
+                Enter Total Users.
+              </div>
+
             </div>
           </div>
       </div>
@@ -87,7 +109,7 @@
       <div class="form-group row my-4">
         <div class="col-sm-10 offset-sm-2">
           <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-          <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+          <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
           <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
         </div>
       </div>
