--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -39,7 +39,7 @@
       </div>
   
       <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('document-types')">
+        <div class="card" (click)="navigateTo('document-revision')">
           <div class="card-body">
             <i class="fa fa-cash-register"></i>
             <h5 class="card-title">Document Revision</h5>
