--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -20,29 +20,31 @@
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
-                        <th pSortableColumn="drid" style="width:20%">Req Code<p-sortIcon field="drid"></p-sortIcon></th>
-                        <th pSortableColumn="documenttype" style="width:10%">Document type <p-sortIcon field="documenttype"></p-sortIcon></th>
+                        <th pSortableColumn="atid" style="width:20%">Req Code<p-sortIcon field="atid"></p-sortIcon></th>                        
+                        <th pSortableColumn="documentTitle" style="width:10%">Document Title <p-sortIcon field="documentTitle"></p-sortIcon></th>
+                        <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
+                        <th pSortableColumn="documentType" style="width:10%">Document type <p-sortIcon field="documentType"></p-sortIcon></th>
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                        <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
-                        <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
-                        <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
-                        <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th>
+                        <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
+                        <th pSortableColumn="reviewDate" style="width:200px">Review Date <p-sortIcon field="reviewDate"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
+                        <th pSortableColumn="version" style="width:200px">Version <p-sortIcon field="version"></p-sortIcon></th>                        
                         <th style="width:80px">Actions</th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-docType let-i="rowIndex">
+                <ng-template pTemplate="body" let-revision let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>{{docType?.drid}}</td>
-                        <td>{{docType?.documenttype}}</td>
-                        <td>{{docType?.department}}</td>
-                        <td>{{docType?.modifiedBy}}</td>
-                        <td>{{docType?.modifiedDate| date}}</td>
-                        <td>{{docType?.approvedby}}</td>
-                        <td>{{docType?.approvedOn| date}}</td>
-                        <td><span class="status" [ngClass]="getStatusClass(docType['status'])">{{docType.status}} </span></td>
-                        <td class="text-center"><i *ngIf="docType?.status=='In-Progress'" (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
+                        <td>{{revision?.atid}}</td>
+                        <td>{{revision?.documentTitle}}</td>                        
+                        <td>{{revision?.documentno}}</td>
+                        <td>{{revision?.documentType}}</td>
+                        <td>{{revision?.department}}</td>
+                        <td>{{revision?.effectiveDate| date}}</td>
+                        <td>{{revision?.reviewDate| date}}</td>                        
+                        <td><span class="status" [ngClass]="getStatusClass(revision['status'])">{{revision.status}} </span></td>
+                        <td>{{revision?.version}}</td>
+                        <td class="text-center"><i *ngIf="revision?.status=='InProgress'" (click)="editdocrevision(revision)" class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
