--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -3,7 +3,7 @@
         <div class="col">
            
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">Document Requests</h4>
+                <h4 class="page-title flex-grow-1">Document Revision</h4>
                 <div class="d-flex page-title-actions">
                   <input type="text" class="form-control" placeholder="Search">
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button>
