--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -10,7 +10,7 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
             <label for="workflowName" class="col-sm-2 col-form-label"
-              >Workflow Name</label
+              >Workflow Name <span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
               <input
@@ -20,12 +20,17 @@
                 name="workflowName"
                 placeholder="Workflow workflowName"
                 [(ngModel)]="workflow.workflowName"
+                required
+                #workflowNameInput="ngModel"
               />
+              <div *ngIf="workflowNameInput.invalid && (workflowNameInput.dirty || workflowNameInput.touched)" class="text-danger">
+                Workflow is Required
+              </div>
             </div>
           </div>
           <div class="form-group row">
             <label for="workflowCode" class="col-sm-2 col-form-label"
-              >Code</label
+              >Code<span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
               <input
@@ -34,13 +39,19 @@
                 id="workflowCode"
                 name="workflowCode"
                 placeholder="System Generated"
-                [(ngModel)]="workflow.code" readonly
+                [(ngModel)]="workflow.code" 
+                required
+                #workflowCodeInput="ngModel"
+                readonly
               />
+              <div *ngIf="workflowCodeInput.invalid && (workflowCodeInput.dirty || workflowCodeInput.touched)" class="text-danger">
+                workflowCode is Required
+              </div>
             </div>
           </div>
           <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label"
-              >Document Stage</label
+              >Document Stage <span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
               <p-dropdown
@@ -55,7 +66,7 @@
           </div>
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label"
-              >Document type
+              >Document type <span style="color: red; font-weight: bolder;">*</span> 
             </label>
             <div class="col-sm-10">
               <p-dropdown
@@ -73,7 +84,7 @@
 
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label"
-              >Department</label
+              >Department <span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
               <p-multiSelect
