--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -23,8 +23,9 @@
                         <th pSortableColumn="drid" style="width:20%">Req Code<p-sortIcon field="drid"></p-sortIcon></th>
                         <th pSortableColumn="documenttype" style="width:10%">Document type <p-sortIcon field="documenttype"></p-sortIcon></th>
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                        <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
-                        <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
+                        <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th> -->
+                        <th pSortableColumn="approvedby" style="width:20%">Workflow<p-sortIcon field="workflow"></p-sortIcon></th>
                         <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
                         <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
@@ -37,8 +38,9 @@
                         <td>{{docType?.drid}}</td>
                         <td>{{docType?.documenttype}}</td>
                         <td>{{docType?.department}}</td>
-                        <td>{{docType?.modifiedBy}}</td>
-                        <td>{{docType?.modifiedDate| date}}</td>
+                        <td>{{docType?.workflow}}</td>
+                        <!-- <td>{{docType?.modifiedBy}}</td>
+                        <td>{{docType?.modifiedDate| date}}</td> -->
                         <td>{{docType?.approvedby}}</td>
                         <td>{{docType?.approvedOn| date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(docType['status'])">{{docType.status}} </span></td>
