--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -80,11 +80,12 @@
           <div class="form-group row my-4">
             <div class="col-sm-10 offset-sm-2">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid"  *ngIf="!viewMode">Submit</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid"  *ngIf="!editMode">Submit</button>
               <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" *ngIf="editMode" >Update</button>
               <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-success" (click)="previewprint(template)">Preview</button>
             </div>
           </div>
 
@@ -93,3 +94,19 @@
     </div>
   </div>
 </div>
+
+
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Preview</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+  </div>
+</ng-template>
