--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -30,7 +30,7 @@
           </div>
           <div class="form-group row">
             <label for="workflowCode" class="col-sm-2 col-form-label"
-              >Code<span style="color: red; font-weight: bolder;">*</span></label
+              > Workflow Code<span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
               <input
