--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-master-home/document-master-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-master-home/document-master-home.component.html
@@ -1,61 +1,60 @@
 <div class="container-fluid">
+  <div class="row p-2">
+
     <div class="row p-2">
-  
-      <div class="row p-2">
-        <div class="col">
-          <h4 class="page-title"><a (click)="navigateTo('home')"><i class="bi bi-house-door"></i></a> / Document Master</h4>
-        </div>
+      <div class="col">
+        <h4 class="page-title"><a (click)="navigateTo('home')"><i class="bi bi-house-door"></i></a> / Document Master</h4>
       </div>
-      
-  
-      <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('document-types')">
-          <div class="card-body">
-            <!-- <i class="fa fa-chart-pie"></i> -->
-            <i class="fa fa-code-compare"></i>
-            <h5 class="card-title">Document Types</h5>
-          </div>
-        </div>
-      </div>
-  
-      <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('templates')">
-          <div class="card-body">
-            <i class="fa fa-palette"></i>
-            <h5 class="card-title">Template Configuration</h5>
-          </div>
-        </div>
-      </div>
-  
-      
-  
-      <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('workflow')">
-          <div class="card-body">
-            <i class="fa fa-fan"></i>
-            <h5 class="card-title">Workflow Configuration</h5>
-          </div>
-        </div>
-      </div>
-  
-      <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('document-types')">
-          <div class="card-body">
-            <i class="fa fa-message"></i>
-            <h5 class="card-title">Notifications Configuration</h5>
-          </div>
-        </div>
-      </div>
-  
-      <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('document-types')">
-          <div class="card-body">
-            <i class="fa fa-chart-line"></i>
-            <h5 class="card-title">Dashboard Configuration</h5>
-          </div>
-        </div>
-      </div>
-  
     </div>
+    
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('document-types')">
+        <div class="card-body">
+          <!-- <i class="fa fa-chart-pie"></i> -->
+          <i class="fa fa-code-compare"></i>
+          <h5 class="card-title">Document Type Configuration</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('templates')">
+        <div class="card-body">
+          <i class="fa fa-palette"></i>
+          <h5 class="card-title">Document Template Configuration</h5>
+        </div>
+      </div>
+    </div>
+
+    
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('workflow')">
+        <div class="card-body">
+          <i class="fa fa-fan"></i>
+          <h5 class="card-title">Work flow Configuration</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('document-types')">
+        <div class="card-body">
+          <i class="fa fa-message"></i>
+          <h5 class="card-title">Notification Configuration</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('document-types')">
+        <div class="card-body">
+          <i class="fa fa-chart-line"></i>
+          <h5 class="card-title">Dashboard Configuration</h5>
+        </div>
+      </div>
+    </div>
+
   </div>
-  
+</div>
