--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -1,17 +1,26 @@
+
+
+
+
+
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
            
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Document type configuration</h4>
-                <div class="d-flex page-title-actions">
 
+                <div class="back-icon" style="margin-right: 10px;">
+                    <a href="javascript:void(0);" onclick="history.back();">
+                        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                    </a>
+                </div>
+                
+                <div class="d-flex page-title-actions">
                     <div class="input-group">
                         <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
                         <span class="input-group-text"><i class="fas fa-search"></i></span>
                       </div>
-
-                  
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDocumentType()" *ngIf="access">New</button>
                 </div>
               </div>
@@ -28,8 +37,8 @@
                 <ng-template pTemplate="header">
                     <tr>
                         <th>S.No</th>
-                        <th pSortableColumn="Documenttypename" style="width:20%">Document type<p-sortIcon field="Documenttypename"></p-sortIcon></th>
-                        <th pSortableColumn="documenttypeprefix" style="width:10%">Prefix <p-sortIcon field="documenttypeprefix"></p-sortIcon></th>
+                        <th pSortableColumn="Documenttypename" style="width:20%">Document type Name<p-sortIcon field="Documenttypename"></p-sortIcon></th>
+                        <th pSortableColumn="documenttypeprefix" style="width:10%"> Document Prefix Name <p-sortIcon field="documenttypeprefix"></p-sortIcon></th>
                         <!-- <th pSortableColumn="Description" style="width:15%">Description<p-sortIcon field="Description"></p-sortIcon></th> -->
                         <th pSortableColumn="ModifiedBy" style="width:20%">Registered by<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
                         <th pSortableColumn="ModifiedDate" style="width:200px">Registered On <p-sortIcon field="ModifiedDate"></p-sortIcon></th>
