--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -4,9 +4,21 @@
            
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Work flow configuration</h4>
-                <div class="d-flex page-title-actions">
-                    <input type="text" class="form-control" pInputText type="text" (input)="workflowTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search Workflows" />
                 
+                <div class="back-icon" style="margin-right: 10px;">
+                    <a href="javascript:void(0);" onclick="history.back();">
+                        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                    </a>
+                </div>
+                
+
+                <div class="d-flex page-title-actions">
+                    
+                    <div class="input-group">
+                        <input type="text" class="form-control" pInputText type="text" (input)="workflowTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search Workflows" maxlength="50"/>
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                      </div>
+                                    
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddWorkflow()" *ngIf="access">New</button>
                 </div>
               </div>
@@ -22,7 +34,7 @@
             [rowsPerPageOptions]="rowsPerPageOptions" >
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>#</th>
+                        <th>S.no</th>
                         <th pSortableColumn="workflowName" style="width:20%">Workflow<p-sortIcon field="workflowName"></p-sortIcon></th>
                         <th pSortableColumn="documentstage" style="width:20%">Document Stage<p-sortIcon field="documentstage"></p-sortIcon></th>
                         <th pSortableColumn="documenttype" style="width:10%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
